# BibCleaner

./: .bibcleaner_openalex_cache.json  .dockerignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  output.bib  pyproject.toml  render.yaml  requirements.txt  setup.py
bibcleaner/: __init__.py  api.py  arxiv_api.py  bibcleaner.py  cache.py  citations.py  cli.py  crossref.py  dblp.py  dedup.py  enrich.py  enricher.py  latex.py  openalex.py  parser.py  venues.py  web_api.py
bibcleaner/providers/: __init__.py  arxiv.py  crossref.py  openalex.py  provider.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: app.test.ts  app.ts  helpers.ts  main.ts  test-setup.ts
providers/: dblp.py  openalex.py  semanticscholar.py
tests/: test_api.py  test_basic.py  test_offline.py
