[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bib-cleaner"
version = "0.1.0"
authors = [
  { name="Hamada Zahera" }
]
description = "Automated BibTeX cleaning: replace arXiv preprints with published venues, normalize venue names, and tidy entries for LaTeX."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["bibtex", "bibliography", "latex", "arxiv", "references", "citations", "dblp", "crossref"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "requests>=2.25.0",
    "bibtexparser==2.0.0b9",
    "tqdm>=4.65.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.20"
]

[project.urls]
Homepage = "https://github.com/hzahera/bib-cleaner"
Repository = "https://github.com/hzahera/bib-cleaner"
Issues = "https://github.com/hzahera/bib-cleaner/issues"

[project.scripts]
bibcleaner = "bibcleaner.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx2>=2.0.0",
    "ruff>=0.15.14",
]

[tool.setuptools.packages.find]
include = ["bibcleaner*"]
